# coin-flipper

./: Cargo.toml
src/: gpgpu.rs  kernel.cl  lib.rs  main.rs
