[package]
name = "coin-flipper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.max-perf]
inherits = "release"
lto = true
codegen-units = 1
# panic = "abort"

[dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
getrandom = { version = "0.2.3", features = ["std", "rdrand"] }
